--- a/feeka-web/src/styles/main.scss
+++ b/feeka-web/src/styles/main.scss
@@ -6,3 +6,145 @@ body {
 .btn-primary {
     color: blue;
 }
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #000;
+}
+
+.title-purple {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 25px;
+    color: #481C51;
+}
+
+.text-yellow {
+    color: #E1AE2C
+}
+
+#main-title {
+    margin-bottom: 0.5em;
+}
+
+.container {
+    margin: 5em auto 1em auto;
+}
+
+.container#company-intro {
+    max-width: 1440px;
+    text-align: center;
+    padding: 2em;
+}
+
+.container#company-intro  img {
+    width: 100%;
+}
+
+.container#company-intro h1{
+    margin-top: 1em;
+}
+
+.container#company-intro #company-paragraph {
+    max-width: 18em;
+}
+
+
+.container#company-intro > .row > * {
+    text-align: left;
+}
+
+.container#about-us {
+    margin-top: 1em;
+    margin-bottom: 2em;
+    text-align: center;
+    padding: 2em;
+}
+
+.container#about-us p {
+    text-align: left;
+    max-width: 32em;
+    margin: auto;
+}
+
+.container#about-us-parts {
+    margin-top: 2em;
+    max-width: 1240px;
+}
+
+.container#about-us-parts .card {
+    padding: 1.5em;
+    border-radius: 25px 25px;
+    margin: auto;
+    margin-bottom: 3em;
+    width: 19rem;
+}
+
+.container#about-us-parts .card .card-title {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 22px;
+    color: #481C51;
+}
+
+.container#about-us-parts .card .card-body {
+    padding: 1.5em 0 0 0;
+}
+
+.container#about-us-parts .card .card-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #000;
+}
+
+.container#about-us-parts .row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container#about-us-parts .row > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 768px) {
+    p {
+        font-family: 'Roboto', sans-serif;
+        font-size: 17px;
+        color: #000;
+    }
+    
+    .title-purple {
+        font-family: 'Comfortaa', sans-serif;
+        font-size: 58px;
+        color: #481C51;
+    }
+
+    .container { 
+        margin: 12em auto;
+    }
+
+    .container#company-intro img{
+        width: 100%;
+        padding: 0;
+    }
+    
+    .container#company-intro #company-paragraph {
+        max-width: 23em;
+    }
+
+    .container#about-us {
+        margin-bottom: 8em;
+    }
+
+    .container#about-us-parts {
+        margin-top: 8em;
+    }
+
+    .container#about-us-parts .card {
+        margin-bottom: 0;
+    }
+
+}
