Added same height to cards

--- a/feeka-web/src/main.css
+++ b/feeka-web/src/main.css
@@ -77,6 +77,7 @@ p {
   margin: auto;
   margin-bottom: 3em;
   width: 19rem;
+  height: 100%;
 }
 
 .container#about-us-parts .card .card-title {
@@ -93,19 +94,6 @@ p {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   color: #000;
-}
-
-.container#about-us-parts .row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.container#about-us-parts .row > [class*=col-] {
-  display: flex;
-  flex-direction: column;
 }
 
 @media (min-width: 768px) {
