--- a/feeka-web/src/styles/main.scss
+++ b/feeka-web/src/styles/main.scss
@@ -67,16 +67,19 @@ p {
     margin: auto;
 }
 
-.container#about-us-parts {
+.container#about-us-parts  {
     margin-top: 2em;
     max-width: 1240px;
+}
+
+.container#about-us-parts [class*='col-']{
+    margin-bottom: 3em;
 }
 
 .container#about-us-parts .card {
     padding: 1.5em;
     border-radius: 25px 25px;
     margin: auto;
-    margin-bottom: 3em;
     width: 19rem;
     height: 100%;
 }
