Playing a little bit with the shapes, colors are right, missing the positions

--- a/feeka-web/src/styles/morphing.scss
+++ b/feeka-web/src/styles/morphing.scss
@@ -15,16 +15,16 @@
 
 body {
 	--text-color: #fff;
-	--background-color: #363dc2;
-	--background-color-2: #282faf;
-	--background-color-3: #202692;
+	--background-color: #481C51;
+	--background-color-2: #481C51;
+	--background-color-3: #481C51;
 	--link-color: #03b9f1;
 	--link-hover-color: #fff;
 	font-family: 'Roboto Mono', monospace;
 	font-weight: 500;
 	color: #fff;
 	color: var(--text-color);
-	background-color: #363dc2;
+	background-color: #481C51;
 	background-color: var(--background-color);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
