--- a/feeka-web/src/main.css
+++ b/feeka-web/src/main.css
@@ -12,6 +12,47 @@ img {
   border-radius: 2%;
 }
 
+.page-footer .footer-logo {
+  max-width: 100%;
+  height: auto;
+}
+
+.footer-title {
+  font-family: "Comfortaa", cursive;
+  color: #481C51;
+  font-weight: bolder;
+}
+
+.footer-navigation, .footer-contact {
+  font-family: "Roboto", sans-serif;
+  color: black;
+}
+.footer-navigation p a, .footer-contact p a {
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .footer-navigation {
+    display: none;
+  }
+
+  .footer-contact {
+    margin-left: 3em;
+  }
+
+  .footer-title {
+    display: none;
+  }
+
+  .page-footer {
+    font-size: 0.8em;
+    padding: 0em 1em;
+  }
+  .page-footer img {
+    width: 70%;
+    height: 70%;
+  }
+}
 @font-face {
   font-family: "nexa_boldregular";
   font-weight: bold;
