--- a/feeka-web/src/styles/_global.scss
+++ b/feeka-web/src/styles/_global.scss
@@ -21,3 +21,48 @@ button.btn.btn-primary {
         box-shadow: none;
     }
 }
+
+.navbar {
+    padding: 1.2em 4em !important;
+    background-color: white;
+    transition: all ease-in 0.3s;
+    &.active {
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    }
+    .navbar-brand * {
+        width: 5em;
+    }
+    li {
+        cursor: pointer;
+        a {
+            font-family: $comfortaa;
+            color: $primary-color !important;
+            text-transform: lowercase;
+            font-size: 0.9em;
+            margin-left: 1.4em;
+            transition: all ease-out 0.2s;
+            font-weight: bold;
+            &:hover {
+                color: $secondary-color !important;
+            }
+        }
+        &.contact a {
+            background-color: $primary-color;
+            color: white !important;
+            padding: 0.5em 2em !important;
+            border-radius: 25px 25px;
+            margin-left: 3em !important;
+            &:hover {
+                background-color: $secondary-color;
+            }
+        }
+    }
+}
+
+// Anchor target offset fix
+:target {
+    display: block;
+    position: relative;
+    top: -150px;
+    visibility: hidden;
+}
