--- a/feeka-web/src/style.css
+++ b/feeka-web/src/style.css
@@ -79,10 +79,6 @@ a:focus {
   min-height: 600px;
   pointer-events: none; }
 
-.content {
-  position: relative;
-  display: grid; }
-
 .content--fixed {
   position: fixed;
   top: 0;
@@ -107,7 +103,6 @@ a:focus {
   grid-template-columns: 150px 150px 150px 150px;
   grid-template-rows: 150px 75px 75px;
   grid-template-areas: "... title title title" "author ... desc desc" "author ... link link"; }
-
 
 .content__img {
   grid-column: 1 / 3;
@@ -393,7 +388,8 @@ h6 {
 body,
 span,
 p {
-  font-family: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif;
+  color: black; }
 
 button.btn.btn-primary {
   background-color: #481C51;
@@ -454,7 +450,6 @@ button.btn.btn-primary {
   text-align: center; }
 
 #banner {
-  padding-top: 8em;
   height: 100vh; }
   #banner h1 {
     font-size: 3em; }
@@ -466,34 +461,18 @@ button.btn.btn-primary {
   padding: 0 10em;
   text-align: center; }
 
+@media (max-width: 991.98px) {
+  #banner {
+    padding-top: 10em;
+    height: auto; }
+
+  #about p {
+    padding: 0; } }
+@media (max-width: 767.98px) {
+  #about div[class^='col-']:not(:first-child) {
+    margin-top: 4em; } }
 #main-title {
   margin-bottom: 0.5em; }
-
-#company-intro {
-  height: auto;
-  text-align: center;
-  padding: 2em; }
-
-#company-intro img {
-  width: 100%; }
-
-#company-intro h1 {
-  margin-top: 1em; }
-
-#company-intro #company-paragraph {
-  max-width: 18em; }
-
-#company-intro > .row > * {
-  text-align: left; }
-
-#about-us {
-  margin-top: 8em;
-  margin-bottom: 4em; }
-
-#about-us p {
-  text-align: left;
-  max-width: 32em;
-  margin: auto; }
 
 #about-us-parts [class*='col-'] {
   margin-bottom: 3em; }
@@ -522,25 +501,8 @@ button.btn.btn-primary {
   color: #000; }
 
 @media (min-width: 768px) {
-  p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 17px;
-    color: #000; }
-
-  .title-purple {
-    font-family: 'Comfortaa', sans-serif;
-    font-size: 58px;
-    color: #481C51; }
-
-  #company-intro img {
-    width: 100%;
-    padding: 0; }
-
   #company-intro #company-paragraph {
     max-width: 23em; }
-
-  #about-us {
-    margin-bottom: 4em; }
 
   #about-us-parts .card {
     margin-bottom: 0; } }
