--- a/feeka-web/src/styles/_specific.scss
+++ b/feeka-web/src/styles/_specific.scss
@@ -1,5 +1,4 @@
 #banner {
-    padding-top: 8em;
     height: 100vh;
     h1 {
         font-size: 3em;
@@ -14,5 +13,25 @@
     p {
         padding: 0 10em;
         text-align: center;
+    }
+}
+
+@media (max-width: 991.98px) {
+    #banner {
+        padding-top: 10em;
+        height: auto;
+    }
+    #about {
+        p {
+            padding: 0;
+        }
+    }
+}
+
+@media (max-width: 767.98px) {
+    #about {
+        div[class^='col-']:not(:first-child) {
+            margin-top: 4em;
+        }
     }
 }
