--- a/feeka-web/src/style.css
+++ b/feeka-web/src/style.css
@@ -460,6 +460,26 @@ button.btn.btn-primary {
 #about p {
   padding: 0 10em;
   text-align: center; }
+#about [class*='col-'] {
+  margin-bottom: 3em; }
+#about .card {
+  padding: 1.5em;
+  border-radius: 25px 25px;
+  margin: auto;
+  max-width: 19rem;
+  height: 100%; }
+  #about .card .card-title {
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 22px;
+    color: #481C51; }
+  #about .card img {
+    height: 217.617px; }
+  #about .card .card-body {
+    padding: 1.5em 0 0 0; }
+  #about .card .card-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color: #000; }
 
 @media (max-width: 991.98px) {
   #banner {
@@ -471,41 +491,6 @@ button.btn.btn-primary {
 @media (max-width: 767.98px) {
   #about div[class^='col-']:not(:first-child) {
     margin-top: 4em; } }
-#main-title {
-  margin-bottom: 0.5em; }
-
-#about-us-parts [class*='col-'] {
-  margin-bottom: 3em; }
-
-#about-us-parts .card {
-  padding: 1.5em;
-  border-radius: 25px 25px;
-  margin: auto;
-  max-width: 19rem;
-  height: 100%; }
-
-#about-us-parts .card .card-title {
-  font-family: 'Comfortaa', sans-serif;
-  font-size: 22px;
-  color: #481C51; }
-
-#about-us-parts .card img {
-  height: 217.617px; }
-
-#about-us-parts .card .card-body {
-  padding: 1.5em 0 0 0; }
-
-#about-us-parts .card .card-text {
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  color: #000; }
-
-@media (min-width: 768px) {
-  #company-intro #company-paragraph {
-    max-width: 23em; }
-
-  #about-us-parts .card {
-    margin-bottom: 0; } }
 img {
   border-radius: 2%; }
 
