--- a/feeka-web/src/styles/_specific.scss
+++ b/feeka-web/src/styles/_specific.scss
@@ -6,38 +6,34 @@
     p {
         color: $secondary-color;
         padding-right: 8em;
+        font-size: 1.2em;
     }
 }
 
 #about {
-    p {
-        padding: 0 10em;
+    .description {
+        padding: 0 7.8em;
         text-align: center;
     }
-    [class*='col-']{
-        margin-bottom: 3em;
-    }
-    .card {
-        padding: 1.5em;
-        border-radius: 25px 25px;
-        margin: auto;
-        max-width: 19rem;
-        height: 100%;
-        .card-title {
-            font-family: 'Comfortaa', sans-serif;
-            font-size: 22px;
-            color: #481C51;
-        }
-        img {
-            height: 217.617px;
-        }
-        .card-body {
-            padding: 1.5em 0 0 0;
-        }
-        .card-text {
-            font-family: 'Roboto', sans-serif;
-            font-size: 15px;
-            color: #000;
+    #about-cards {
+        margin: 6em 6em;
+        .card {
+            padding: 1.5em;
+            border-radius: 25px 25px;
+            max-width: 20rem;
+            height: 100%;
+            margin: auto;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+            border: none;
+            img {
+                height: 10em;
+            }
+            .card-title {
+                font-size: 1.4em;
+            }
+            .card-body {
+                padding-top: 2.5em;
+            }
         }
     }
 }
@@ -46,10 +42,16 @@
     #banner {
         padding-top: 10em;
         height: auto;
+        p {
+            padding: 0 0 2em 0;
+        }
     }
     #about {
-        p {
+        .description {
             padding: 0;
+        }
+        #about-cards {
+            margin: 6em 0;
         }
     }
 }
