--- a/feeka-web/src/styles/_specific.scss
+++ b/feeka-web/src/styles/_specific.scss
@@ -16,7 +16,7 @@
         text-align: center;
     }
     #about-cards {
-        margin: 6em 6em;
+        margin: 6em 0 8em 0;
         .card {
             padding: 1.5em;
             border-radius: 25px 25px;
@@ -38,6 +38,15 @@
     }
 }
 
+#projects {
+    .row {
+        margin: 5em 0 8em 0;
+    }
+    button {
+        margin-top: 2em;
+    }
+}
+
 @media (max-width: 991.98px) {
     #banner {
         padding-top: 10em;
@@ -50,16 +59,20 @@
         .description {
             padding: 0;
         }
-        #about-cards {
-            margin: 6em 0;
-        }
-    }
-}
-
-@media (max-width: 767.98px) {
-    #about {
         div[class^='col-']:not(:first-child) {
             margin-top: 4em;
+        }
+    }
+    #projects {
+        div[class='row']:nth-child(2n+1) {
+            div[class^='col-']:first-child {
+                margin-top: 4em;
+            }
+        }
+        div[class^='row']:nth-child(2n+2) {
+            div[class^='col-']:not(:first-child) {
+                margin-top: 4em;
+            }
         }
     }
 }
