--- a/feeka-web/src/style.css
+++ b/feeka-web/src/style.css
@@ -391,6 +391,9 @@ p {
   font-family: "Roboto", sans-serif;
   color: black; }
 
+img {
+  border-radius: 2%; }
+
 button.btn.btn-primary {
   background-color: #481C51;
   color: white;
@@ -449,6 +452,21 @@ button.btn.btn-primary {
   text-transform: lowercase;
   text-align: center; }
 
+footer {
+  margin: 20em 0 3em 0; }
+  footer h6 {
+    font-weight: bold;
+    text-transform: lowercase;
+    margin-bottom: 1.5em; }
+  footer i {
+    color: #E1AE2C;
+    width: 1em;
+    font-size: 1.1em; }
+  footer p {
+    margin: 0;
+    padding-left: 1em;
+    font-size: 0.9em; }
+
 #banner {
   height: 100vh; }
   #banner h1 {
@@ -499,39 +517,5 @@ button.btn.btn-primary {
     margin-top: 4em; }
   #projects div[class^='row']:nth-child(2n+2) div[class^='col-']:not(:first-child) {
     margin-top: 4em; } }
-img {
-  border-radius: 2%; }
-
-.page-footer .footer-logo {
-  max-width: 100%;
-  height: auto; }
-
-.footer-title {
-  font-family: 'Comfortaa', cursive;
-  color: #481C51;
-  font-weight: bolder; }
-
-.footer-navigation, .footer-contact {
-  font-family: 'Roboto', sans-serif;
-  color: black; }
-  .footer-navigation p a, .footer-contact p a {
-    color: black; }
-
-@media (max-width: 768px) {
-  .footer-navigation {
-    display: none; }
-
-  .footer-contact {
-    margin-left: 3em; }
-
-  .footer-title {
-    display: none; }
-
-  .page-footer {
-    font-size: 0.8em;
-    padding: 0em 1em; }
-    .page-footer img {
-      width: 70%;
-      height: 70%; } }
 
 /*# sourceMappingURL=style.css.map */
