--- a/feeka-web/src/style.css
+++ b/feeka-web/src/style.css
@@ -396,6 +396,7 @@ img {
 
 button.btn.btn-primary {
   background-color: #481C51;
+  font-family: "Comfortaa", cursive;
   color: white;
   border-radius: 25px 25px;
   outline: none;
@@ -444,7 +445,7 @@ button.btn.btn-primary {
 :target {
   display: block;
   position: relative;
-  top: -70px;
+  top: -120px;
   visibility: hidden; }
 
 .section h1 {
